Fix pin on mobile

--- a/src/static/css/blog.css
+++ b/src/static/css/blog.css
@@ -20,6 +20,13 @@
   line-height: 26px;
 }
 
+@media screen and (max-width: 425px) {
+  #blog li.pinned::before {
+    margin-left: -14px;
+    font-size: 10px;
+  }
+}
+
 #blog li > *:first-of-type {
   padding-right: 32px;
   text-align: left;
